# smartnews

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  setup_agent.sh
.github/workflows/: monitor.yml  pipeline.yml  quality_gate.yml  user_journey_monitor.yml
api/: config.py  db.py  main.py  models.py  pyproject.toml
api/routers/: __init__.py  articles.py  briefing.py  categories.py  claims.py  clusters.py  entities.py  events.py  home.py  insights.py  narratives.py  search.py  sources.py  stories.py  topics.py
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  LEARNINGS.md  MIGRATION_PLAN.md  PRODUCT_GOALS.md  PRODUCT_VALIDATIONS.md  README.md  RENDER_DEPLOY_CHECKLIST.md  ROADMAP.md  SETUP.md  VALIDATIONS.md  VERCEL_DEPLOY_CHECKLIST.md  smart_news_web_product_architecture.md
docs/archive/: LAYER8_PLAN.md  MIGRATION_PLAN.md  NEXT_AGENT_PROMPT.md  QUICKSTART.md  README.md  mcp_skill.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ArticleCard.tsx  CategoryBadge.tsx  ClickTracker.tsx  Footer.tsx  HypeHistoryChart.tsx  MobileNav.tsx  Navbar.tsx  ScoreBadge.tsx  SearchBar.tsx  TrendingTopics.tsx
frontend/e2e/: user_journey.spec.ts
pipeline/: 01_bronze_ingestion.py  01b_fulltext_scraping.py  02_silver_transformation.py  03_gold_aggregation.py  03b_story_matching.py  04_ai_enrichment.py  04b_claim_extraction.py  05_serving_projection.py  validate.py
tests/: contract_api.py  live_data_quality.py  smoke_api.py  smoke_frontend.py
(+16 files in other folders)
